--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="d-flex align-items-center">
             <div class="site-logo mr-auto">
               <a href="index.html"><marquee>
-                <h1 style="color: red;font-style: italic;z-index: 7;"> Reboard  Admission  Free(2020)</h1>
+                <h1 style="color: red;font-style: italic; z-index:7;"> Reboard  Admission Open(2020)</h1>
               </marquee><span class="text-primary"></span></a>
 
             </div>
